--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi==0.111.0
 uvicorn[standard]==0.30.1
 jinja2==3.1.4
 pydantic==2.7.4
+pydantic-settings==2.3.4
 pyyaml==6.0.1
 pytest==8.2.0
 httpx==0.27.0
